syntax = "proto3";

package ecliptix.proto.device;
option csharp_namespace = "Ecliptix.Protobuf.Device";

message AppDevice {
  bytes app_instance_id = 1;
  bytes device_id = 2;

  enum DeviceType {
    MOBILE = 0;
    DESKTOP = 1;
  }

  DeviceType device_type = 3;
}

message DeviceRegistrationResponse {
  enum Status {
    NEW_REGISTRATION = 0;
    ALREADY_EXISTS = 1;
    INVALID_REQUEST = 2;
    INTERNAL_ERROR = 3;
  }

  Status status = 1;
  bytes server_public_key = 2;
  string message = 3;
}

